--- a/aprs-box/15.05.1/Makefile
+++ b/aprs-box/15.05.1/Makefile
@@ -1,5 +1,7 @@
 BUILDER := builder
 SDK := sdk
+MT7620_BUILDER_TGZ := OpenWrt-ImageBuilder-ramips-mt7620.Linux-x86_64.tar.bz2
+MT7620_SDK_TGZ := OpenWrt-SDK-ramips-mt7620_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
 BRCM47XX_BUILDER_TGZ := OpenWrt-ImageBuilder-15.05.1-brcm47xx-legacy.Linux-x86_64.tar.bz2
 BRCM47XX_SDK_TGZ := OpenWrt-SDK-15.05.1-brcm47xx-legacy_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
 BRCM63XX_BUILDER_TGZ := OpenWrt-ImageBuilder-15.05.1-brcm63xx-generic.Linux-x86_64.tar.bz2
@@ -111,12 +113,23 @@ mt7620: $(PREPARED_TARGETS)
 # Try extracting ImageBuilder & SDK to current directory
 define ExtractImageBuilder
 	@[ -d "$(subst .tar.bz2,,$(1))" ] || echo extracting $(1) && tar jxf /opt/openwrt/dl/$(1)
-        @[ -d "$(subst .tar.bz2,,$(2))" ] || echo extracting $(2) && tar jxf /opt/openwrt/dl/$(2)
-        rm -f builder sdk
-        ln -s $(subst .tar.bz2,,$(1)) builder
-        ln -s $(subst .tar.bz2,,$(2)) sdk
+    @[ -d "$(subst .tar.bz2,,$(2))" ] || echo extracting $(2) && tar jxf /opt/openwrt/dl/$(2)
+    rm -f builder sdk
+    ln -s $(subst .tar.bz2,,$(1)) builder
+    ln -s $(subst .tar.bz2,,$(2)) sdk
 endef
 
+define ExtractCustomizedImageBuilder
+	@[ -d "$(subst .tar.bz2,,$(1))" ] || echo extracting customize/$(1) && tar jxf /opt/openwrt/dl/customize/$(1)
+    @[ -d "$(subst .tar.bz2,,$(2))" ] || echo extracting customize/$(2) && tar jxf /opt/openwrt/dl/customize/$(2)
+    rm -f builder sdk
+    ln -s $(subst .tar.bz2,,$(1)) builder
+    ln -s $(subst .tar.bz2,,$(2)) sdk
+endef
+
+extract_mt7620:
+	$(call ExtractCustomizedImageBuilder,$(MT7620_BUILDER_TGZ),$(MT7620_SDK_TGZ))
+	
 extract_brcm63xx:
 	$(call ExtractImageBuilder,$(BRCM63XX_BUILDER_TGZ),$(BRCM63XX_SDK_TGZ))
 
@@ -151,11 +164,13 @@ distclean:
 
 DEPLOY_ROOT := hamclub:/opt/openwrt/build/customize/15.05.1
 deploy_packages:
+	@[ ! -d sdk/bin/ramips/packages ] || scp -r sdk/bin/ramips/packages/* $(DEPLOY_ROOT)/ramips/mt7620/packages/
 	@[ ! -d sdk/bin/brcm63xx/packages ] || scp -r sdk/bin/brcm63xx/packages/* $(DEPLOY_ROOT)/brcm63xx/generic/packages/
 	@[ ! -d sdk/bin/brcm47xx/packages ] || scp -r sdk/bin/brcm47xx/packages/* $(DEPLOY_ROOT)/brcm47xx/legacy/packages/
 
 deploy:
 ifeq ($(TYPE),)
+	[ ! -f builder/bin/ramips/openwrt-15.05.1-mt7620-fs-cfe.bin ] || scp builder/bin/brcm63xx/openwrt-15.05.1-brcm63xx-generic-RG100A-squashfs-cfe.bin $(DEPLOY_ROOT)/15.05.1-h618c-aprs-squashfs-cfe.bin
 	[ ! -f builder/bin/brcm63xx/openwrt-15.05.1-brcm63xx-generic-RG100A-squashfs-cfe.bin ] || scp builder/bin/brcm63xx/openwrt-15.05.1-brcm63xx-generic-RG100A-squashfs-cfe.bin $(DEPLOY_ROOT)/15.05.1-h618c-aprs-squashfs-cfe.bin
 	[ ! -f builder/bin/brcm47xx/openwrt-15.05.1-brcm47xx-legacy-squashfs.trx ] || scp builder/bin/brcm47xx/openwrt-15.05.1-brcm47xx-legacy-squashfs.trx $(DEPLOY_ROOT)/15.05.1-h618b-aprs-squashfs.trx
 else
